--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="container">
 
         <p>This is a Demo of a PWA app and below are some of the APIs implemented for demonstration. If you are
-            interested the<a href=""> Code </a>is awaitable in Github, check it out and play around. </p>
+            interested the<a href=""> Code </a>is available in Github, check it out and play around. </p>
         <ul>
-            <li><a href="">Input Form (vibration Demo)</a></li>
+            <li><a href="./src/form.html">Input Form (vibration Demo)</a></li>
             <li><a href="">Accelerometer Gyro Demo</a></li>
             <li><a href="">Clipboard API</a></li>
             <li><a href="">Ambient light Sensor Api</a></li>
