--- a/src/form.html
+++ b/src/form.html
@@ -47,7 +47,7 @@
 
     <script>
         function btnClicked() {
-            window.navigator.vibrate(200);
+            window.navigator.vibrate([200, 100, 200, 100]);
         }
     </script>
 </body>
