--- a/src/form.html
+++ b/src/form.html
@@ -52,10 +52,9 @@
             let password = document.getElementById('password').value;
 
             if (userName == "admin" && password == "admin") {
-                alert("Success Full")
+                alert("Successful")
             } else {
                 window.navigator.vibrate([200, 100, 200,]);
-
             }
 
 
