--- a/src/form.html
+++ b/src/form.html
@@ -55,6 +55,8 @@
                 alert("Successful")
             } else {
                 window.navigator.vibrate([200, 100, 200,]);
+                alert("Incorrect Password")
+
             }
 
 
