--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             interested the<a href=""> Code </a>is available in Github, check it out and play around. </p>
         <ul>
             <li><a href="./src/form.html">Input Form (vibration Demo)</a></li>
-            <li><a href="">Accelerometer Gyro Demo</a></li>
+            <li><a href="./src/accgyro.html">Accelerometer Gyro Demo</a></li>
             <li><a href="">Clipboard API</a></li>
             <li><a href="">Ambient light Sensor Api</a></li>
 
