--- a/src/accgyro.html
+++ b/src/accgyro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo 1</title>
+    <title>Demo 2</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,19 +25,10 @@
     </nav>
     <div class="container">
 
-        <p>the username is "admin" and password is "admin". for incorrect form submission vibration feedback demo. </p>
+        <p>Accelerometer & Gyroscope is available in Navigator Chrome API, Demo is available on intel.github <a
+                href="https://intel.github.io/generic-sensor-demos/orientation-phone/">demo</a></p>
 
-        <form>
-            <p>
-                <label>Username : </label> <input id="userName" type="text" placeholder="John Doe" />
-            </p>
-            <p>
-                <label>Password : </label><input id="password" type="password" />
-            </p>
-            <p>
-                <button class="submit-btn" type="button" onclick="btnClicked()">Submit</button>
-            </p>
-        </form>
+
 
     </div>
 
