--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 
+    <link rel="manifest" href="./manifest.json" />
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="./images/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" href="./images/icons/icon-96x96.png" />
+    <link rel="apple-touch-icon" href="./images/icons/icon-128x128.png" />
+    <link rel="apple-touch-icon" href="./images/icons/icon-144x144.png" />
+    <link rel="apple-touch-icon" href="./images/icons/icon-152x152.png" />
+    <link rel="apple-touch-icon" href="./images/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="./images/icons/icon-284x284.png" />
+    <link rel="apple-touch-icon" href="./images/icons/icon-512x512.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+    <meta name="theme-color" content="#db4938" />
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,6 +28,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="./src/style.css">
+
 </head>
 
 <body>
@@ -37,6 +52,20 @@
 
 
     <footer>💾 rabeeh_ta</footer>
+
+
+    <script>
+        if ("serviceWorker" in navigator) {
+            window.addEventListener("load", function () {
+                navigator.serviceWorker
+                    .register("./sw.js")
+                    .then(res => console.log("service worker registered"))
+                    .catch(err => console.log("service worker not registered", err))
+            })
+        }
+
+    </script>
+
 </body>
 
 </html>
