--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
             <li><a href="./src/form.html">Input Form (vibration Demo)</a></li>
             <li><a href="./src/accgyro.html">Accelerometer Gyro Demo</a></li>
-            <li><a href="https:www.pace-lab.herokuapp.com">Clipboard API</a></li>
+            <li><a href="https://pace-lab.herokuapp.com/">Clipboard API</a></li>
             <li><a href="">Ambient light Sensor Api</a></li>
 
         </ul>
